fix background img not showing

--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-cover {
+  background-image: url(/images/wedding_background.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
